--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.11.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
